semantic html starter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
     <script defer src="main.js"></script>
 </head>
 <body>
-    
+    <!--header begins-->
+    <header id="top">
+        <h1>Phase 1 Project</h1>
+        <nav> <ul>
+            <li>
+                <a href="#section1">Section 1</a>
+            </li>
+            <li>
+                <a href="#section2">Section 2</a>
+            </li>
+            <li>
+                <a href="#section3">Section 3</a>
+            </li>
+        </ul>
+        </nav>
+    </header>
+    <!--header ends-->
+
+    <!-- main begins-->
+    <main>
+        <section id="section1">
+        <h2>Section 1 </h2>
+        <img src="#" alt="some image">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit porro in maiores repellendus natus, culpa quasi qui doloribus quisquam, corporis soluta impedit tempora commodi aut hic dolore voluptates illo?</p>
+        </section>
+        <section id="section2">
+            <h2>Section 2 </h2>
+            </section>
+            <section id="section3">
+                <h2>Section 3 </h2>
+                </section>
+    </main>
+    <!--main ends-->
+
+    <!--footer begins-->
+    <footer>
+        <p>Copyright Priyanka D. 2023</p>
+        <a href="#top">Back to top</a>
+    </footer>
+    <!--footer ends-->
 </body>
 </html>
