--- a/index.html
+++ b/index.html
@@ -32,13 +32,32 @@
         <section id="section1">
         <h2>Section 1 </h2>
         <img src="#" alt="some image">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit porro in maiores repellendus natus, culpa quasi qui doloribus quisquam, corporis soluta impedit tempora commodi aut hic dolore voluptates illo?</p>
+        <p>Lorem ipsum dolor sit, 
+            amet consectetur adipisicing elit. 
+            Placeat odit porro in maiores repellendus natus, 
+            culpa quasi qui doloribus quisquam,
+             corporis soluta impedit tempora commodi 
+             aut hic dolore voluptates illo?</p>
         </section>
         <section id="section2">
             <h2>Section 2 </h2>
+            <img src="#" alt="some image">
+        <p>Lorem ipsum dolor sit, 
+            amet consectetur adipisicing elit. 
+            Placeat odit porro in maiores repellendus natus, 
+            culpa quasi qui doloribus quisquam,
+             corporis soluta impedit tempora commodi 
+             aut hic dolore voluptates illo?</p>
             </section>
             <section id="section3">
                 <h2>Section 3 </h2>
+                <img src="#" alt="some image">
+        <p>Lorem ipsum dolor sit, 
+            amet consectetur adipisicing elit. 
+            Placeat odit porro in maiores repellendus natus, 
+            culpa quasi qui doloribus quisquam,
+             corporis soluta impedit tempora commodi 
+             aut hic dolore voluptates illo?</p>
                 </section>
     </main>
     <!--main ends-->
