--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phase 1 Project</title>
+
+    <!-- css reset: modern-normalize-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="styles.css">
     <script defer src="main.js"></script>
 </head>
@@ -29,6 +33,30 @@
 
     <!-- main begins-->
     <main>
+        <section class="search-form">
+            <form action="GET" id="meal-form">
+                <label for="search-terms">Search term:</label>
+                <input type="text" name="search-terms" id="search-terms" placeholder="Input Search Term" required>
+                
+                <br>
+
+                <label for="category-filter">Category filter:</label>
+                <select name="category-filter" id="category-filter" required>
+                    <option value="option 1">option 1</option>
+                    <option value="option 2">option 2</option>
+                    <option value="option 3">option 3</option>
+                </select>
+
+                <br>
+
+                <input type="submit" value="Search">
+
+            </form>
+        </section>
+
+
+
+
         <section id="section1">
         <h2>Section 1 </h2>
         <img src="#" alt="some image">
