--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
    <!--custom css-->
     <link rel="stylesheet" href="styles.css">
+    <!--custom js-->
     <script defer src="main.js"></script>
 </head>
 <body>
