add form heading

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <!-- main begins-->
     <main>
         <section class="search-form">
+            <h2>Form Section</h2>
             <form action="GET" id="meal-form">
                 <label for="search-terms">Search term:</label>
                 <input type="text" name="search-terms" id="search-terms" placeholder="Input Search Term" required>
