--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!--custom css-->
     <link rel="stylesheet" href="styles.css">
     <!--custom js-->
-    <script defer src="main.js"></script>
+    <title>Random Quote Generator</title>
 </head>
 <body>
     <!--header begins-->
