title and image

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
                 
                 <br>
 
-                <label for="category-filter">Category filter:</label>
-                <select name="category-filter" id="category-filter" required>
-                    <option value="option 1">option 1</option>
-                    <option value="option 2">option 2</option>
-                    <option value="option 3">option 3</option>
+    <div id="main-content">
+
+        <h1><strong><em>Social Media Daily Quotes App</em> </strong></h1>
+
+        <div id="imageHere">
+            <img class="beach-image" src="https://source.unsplash.com/1600x900/?beach" alt="beach image" width="850" height="300"/>
+        </div>
                 </select>
 
                 <br>
