--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
         <div id="imageHere">
             <img class="beach-image" src="https://source.unsplash.com/1600x900/?beach" alt="beach image" width="850" height="300"/>
         </div>
+                <!-- <img src="https://random.imagecdn.app/500/150"> -->
+
+
+        <div id="quote-container">
+                <div id="quote">
+                <h2> </h2>
+                </div>
+        </div>
+
+
+        <div id="dropdown-container">
+        <label for="select-quote">Find other quotes: </label>
+        <select id="quote-dropdown" name="select-quote">
+            <option value = "x">Quote of The Day!</option>
+            <option value="a">Second Quote of the Day! ~</option>
+            <option value="b">Yesterday's Quote! </option>
+            <option value="c">Tomorrow's Quote! </option>
                 </select>
 
                 <br>
