--- a/index.html
+++ b/index.html
@@ -68,49 +68,33 @@
             <option value="b">Yesterday's Quote! </option>
             <option value="c">Tomorrow's Quote! </option>
                 </select>
+        </div>
 
-                <br>
 
-                <input type="submit" value="Search">
+        <div id="quote-container">
 
+
+        <div id="comment-container">
+        <h3> Comments: </h3>
+            <ul id="comment-list">
+
+
+            </ul>
+        </div>
+
+
+        <div id="post-container"class="container">
+         <h2>Leave Them a Comment</h2>
+            <form id="form-container">
+            <textarea id="addComment" placeholder='Add Your Comment Here'></textarea>
+
+            <div class="btn">
+                <input type="submit" value='Comment'>
+            </button>
+            </div>
             </form>
-        </section>
-
-
-
-
-        <section id="section1">
-        <h2>Section 1 </h2>
-        <img src="#" alt="some image">
-        <p>Lorem ipsum dolor sit, 
-            amet consectetur adipisicing elit. 
-            Placeat odit porro in maiores repellendus natus, 
-            culpa quasi qui doloribus quisquam,
-             corporis soluta impedit tempora commodi 
-             aut hic dolore voluptates illo?</p>
-        </section>
-        <section id="section2">
-            <h2>Section 2 </h2>
-            <img src="#" alt="some image">
-        <p>Lorem ipsum dolor sit, 
-            amet consectetur adipisicing elit. 
-            Placeat odit porro in maiores repellendus natus, 
-            culpa quasi qui doloribus quisquam,
-             corporis soluta impedit tempora commodi 
-             aut hic dolore voluptates illo?</p>
-            </section>
-            <section id="section3">
-                <h2>Section 3 </h2>
-                <img src="#" alt="some image">
-        <p>Lorem ipsum dolor sit, 
-            amet consectetur adipisicing elit. 
-            Placeat odit porro in maiores repellendus natus, 
-            culpa quasi qui doloribus quisquam,
-             corporis soluta impedit tempora commodi 
-             aut hic dolore voluptates illo?</p>
-                </section>
-    </main>
-    <!--main ends-->
+        </div>
+        </hr>
 
     <!--footer begins-->
     <footer>
