--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
         </div>
         </hr>
 
-    <!--footer begins-->
+    </div>
+    <!-- footer begins -->
     <footer>
         <p>Copyright Priyanka D. 2023</p>
         <a href="#top">Back to top</a>
     </footer>
-    <!--footer ends-->
+    <!-- footer ends -->
 </body>
 </html>
