--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
    <!--custom css-->
     <link rel="stylesheet" href="styles.css">
-    <!--custom js-->
+    <script src="main.js"></script>
     <title>Random Quote Generator</title>
 </head>
 <body>
